--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3"
   }
 }
